<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="45dp"
    tools:context=".Activities.LogInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/eTxtEmailID"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:text=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/eTxtPassID"
        style="@style/EditText"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/enterpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/eTxtEmailID"
        app:layout_constraintStart_toStartOf="@+id/eTxtEmailID"
        app:layout_constraintTop_toBottomOf="@+id/eTxtEmailID" />

    <Button
        android:id="@+id/btSignInID"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="@+id/eTxtPassID"
        app:layout_constraintStart_toStartOf="@+id/eTxtPassID"
        app:layout_constraintTop_toBottomOf="@+id/eTxtPassID" />

    <Button
        android:id="@+id/btCreateID"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="@+id/btSignInID"
        app:layout_constraintStart_toStartOf="@+id/btSignInID"
        app:layout_constraintTop_toBottomOf="@+id/btSignInID" />
</androidx.constraintlayout.widget.ConstraintLayout>